k8s-deployment/k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: housing-ml-api
  namespace: housing-namespace
  labels:
    app: housing-ml-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: housing-ml-api
  template:
    metadata:
      labels:
        app: housing-ml-api
    spec:
      containers:
        - name: housing-ml-api
          image: <YOUR_IMAGE>
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6000
          readinessProbe:
            httpGet:
              path: /health
              port: 6000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 6000
            initialDelaySeconds: 10
            periodSeconds: 20
