k8s-deployment/k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: housing-ml-api
  namespace: housing-namespace
spec:
  selector:
    app: housing-ml-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 6000
  type: ClusterIP
